# comtrade-mirroring

./: .gitignore  LICENSE  README.md  pyproject.toml
mirror/: main.py  user_config.py
mirror/data/static/: areas_not_specified.csv  dist_cepii.dta  venezuela_270900_exports.csv
mirror/src/: complexity_testing.ipynb  python_output.ipynb
mirror/src/objects/: base.py  orchestration.py
mirror/src/stata_files/: Step 1_NEW_totals_combinedv3_cut_added  Step 1_NEW_totals_combinedv3_updated-Copy2.do  Step 4_NEW_Complexity_files_V3_updated.do
mirror/src/table_objects/: aggregate_trade.py  complexity.py  country_country_product_year.py  trade_analysis_cleaner.py  trade_data_reconciler.py  unilateral_services.py
mirror/src/utils/: CIF_calculations.py  api_handler.py  classification_handler.py  country_edge_cases.py  handle_iso_codes_recoding.py  logging.py
original_stata_files/: NEW_Accuracy_and_Totals_combinedv2(1).do  NEW_cleaning_datav7.do  NEW_totals_combinedv3.do
src/: main.py
src/clean/: Do_File1_Python_Translation.ipynb  aggregate_trade.py  ccpy_comparisons_output.ipynb  complexity.py  complexity_testing.ipynb  country_country_product_year.py  country_country_year.py  do2.py  do3.py  load_data.py  main.py  python_output.ipynb  utils.py
src/clean/.ipynb_checkpoints/: Do_File1_Python_Translation-checkpoint.ipynb  aggregate_trade-checkpoint.py  do2-checkpoint.py  do3-checkpoint.py  load_data-checkpoint.py  main-checkpoint.py  utils-checkpoint.py
src/clean/objects/: base.py  concordance_table.py  load_data.py
src/clean/stata_files/: Step 1_NEW_totals_combinedv3_updated.do  Step 2_NEW_Accuracy_and_Totals_combinedv2_updated.do  Step 3_NEW_cleaning_datav7_updated.do  Step 4_NEW_Complexity_files_V3_updated.do
src/clean/table_objects/: accuracy.py  aggregate_trade.py  base.py  complexity.py  concordance_table.py  country_country_product_year.py  load_data.py  (+5 more)
src/config/: user_config.py
(+13 files in other folders)
