[tool.poetry]
name = "clean"
version = "0.1.0"
description = "scripts to run atlas cleaning process (bustos-yildirim method)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.12.0"
ipython = "^8.22.2"
pandas = "^2.2.1"
pyarrow = "^15.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
