[tool.poetry]
name = "mirror"
version = "0.1.0"
description = "scripts to run bilateral trade data mirroring"
authors = ["Harvard Growth Lab"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.12.0"
ipython = "^8.22.2"
pandas = "^2.2.1"
pyarrow = "^15.0.2"
#ecomplexity = "^0.5.3"
dask = "^2024.5.1"
dask-expr = "^1.1.1"
pystata = "^0.0.1"
stata-setup = "^0.1.3"
comtradeapicall = "^1.2.1"
ecomplexity = { git = "git@github.com:cid-harvard/py-ecomplexity-clean.git", branch = "intermediate_pci_val" }
regex = "^2024.11.6"
openpyxl = "^3.1.5"
pytest = "^8.3.4"
pytest-progress = "^1.3.0"
statsmodels = "^0.14.4"
notebook = "^7.4.0"
pyfixest = "^0.29.0"
tabulate = "^0.9.0"
pyhdfe = "^0.2.0"
fredapi = "^0.5.2"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
